@@ -10,7 +10,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -48,7 +47,7 @@ public final class WindowManager {
      * @return list of controllers
      */
     public List<? extends Controller> getControllers() {
-        return getControllerStream().collect(Collectors.toList());
+        return getControllerStream().toList();
     }
 
     /**
